@@ -1,5 +1,5 @@
 {
-  "timestamp" : "2022-07-14T16:41:04Z",
+  "timestamp" : "2022-07-15T08:29:44Z",
   "count_outdated" : 240,
   "uniques_outdated" : 115,
   "count" : 266,
@@ -7,10 +7,10 @@
   "clones" : [
     {
       "timestamp": "2022-07-01T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
+      "count": 1,
+      "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ]
     },
     {
       "timestamp": "2022-07-02T00:00:00Z",
@@ -100,6 +100,13 @@
       "timestamp": "2022-07-14T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
