@@ -1,11 +1,11 @@
 {
   "count": 26,
-  "uniques": 2,
+  "uniques": 1,
   "clones": [
     {
       "timestamp": "2022-07-01T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-07-02T00:00:00Z",
@@ -70,6 +70,11 @@
     {
       "timestamp": "2022-07-14T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-15T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
