@@ -1,3 +1,10 @@
+2022-07-15T08:29:44Z:
+* notice: last 14d: unq all: 1 26
+* notice: prev accum: outdated-unq outdated-all / unq all: 115 240 / 130 266
+* notice: next accum: outdated-unq outdated-all / unq all: 115 240 / 130 266
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-07-01 2022-07-15]
+
 2022-07-14T16:41:04Z:
 * notice: last 14d: unq all: 2 26
 * notice: prev accum: outdated-unq outdated-all / unq all: 114 238 / 130 264
